--- a/adaptive-ir-system/configs/msa_quick_config.yaml
+++ b/adaptive-ir-system/configs/msa_quick_config.yaml
@@ -11,6 +11,7 @@ data:
   dataset_type: 'msa'
   data_dir: '../Query Reformulator'
   index_path: './data/msa_index'
+  max_train_samples: 10000
 
 # Legacy Word2Vec embeddings
 embeddings:
